--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-bien mainetain ou non !<!-- app/templates/base.html -->  
+<!-- app/templates/base.html -->  
 <!doctype html>
 <html lang="ar" dir="rtl">
 <head>
